// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssetUpdater /> rendering should render default props 1`] = `
<DocumentFragment>
  .c4 {
  cursor: pointer;
  border: none;
  border-radius: 10000px;
  box-shadow: 0px 2px 8px RGBA(0,0,0,0.04);
  pointer-events: auto;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #FFFFFF;
  width: 40px;
  height: 40px;
  background-size: 20px auto;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  background-position: center;
  background-color: rgba(255,255,255,0.7);
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c4:disabled {
  pointer-events: none;
  cursor: default;
}

.c4:hover {
  opacity: 100%;
  background-color: rgba(255,255,255,0.9);
}

.c9 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 96px;
  width: 96px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c10 {
  border-radius: 50%;
}

.c8 {
  position: relative;
  height: 104px;
  width: 104px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 100%;
  color: #151515;
}

.c5 {
  display: none;
  width: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  width: 100%;
}

.c3 {
  background: #EEEEEE;
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 16px;
  height: 165px;
  width: 100%;
}

.c6 {
  position: absolute;
  bottom: 0;
  left: 32px;
  -webkit-transform: translateY(45%);
  -ms-transform: translateY(45%);
  transform: translateY(45%);
}

.c7 {
  position: relative;
}

.c11 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:767px) {

}

@media (max-width:767px) {
  .c6 {
    left: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        label="Upload a banner"
        role="application"
      >
        <div
          class="c3"
        >
          <button
            aria-label="Upload a banner"
            class="c4"
          />
        </div>
        <input
          accept="image/gif,image/jpeg,image/png,image/webp"
          aria-invalid="false"
          aria-label="File selector"
          class="c5"
          type="file"
        />
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        class="c2"
        label="Upload an avatar"
        role="application"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
            size="96"
          >
            <div
              class="c9 c10"
              size="96"
            />
          </div>
          <div
            class="c11"
          >
            <button
              aria-label="Upload an avatar"
              class="c4"
            />
          </div>
        </div>
        <input
          accept="image/gif,image/jpeg,image/png,image/webp"
          aria-invalid="false"
          aria-label="File selector"
          class="c5"
          type="file"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AssetUpdater /> rendering should render with full props 1`] = `
<DocumentFragment>
  .c4 {
  cursor: pointer;
  border: none;
  border-radius: 10000px;
  box-shadow: 0px 2px 8px RGBA(0,0,0,0.04);
  pointer-events: auto;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #FFFFFF;
  width: 40px;
  height: 40px;
  background-size: 20px auto;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  background-position: center;
  background-color: rgba(255,255,255,0.7);
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c4:disabled {
  pointer-events: none;
  cursor: default;
}

.c4:hover {
  opacity: 100%;
  background-color: rgba(255,255,255,0.9);
}

.c9 {
  position: relative;
  height: 104px;
  width: 104px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

.c9:before {
  content: "";
  background-color: white;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c10 {
  background-image: url("/avatar.jpg");
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  height: 96px;
  width: 96px;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  position: absolute;
}

.c11 {
  -webkit-clip-path: url(#hexPath);
  clip-path: url(#hexPath);
}

.c18 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  background-color: rgba(0,0,0,0.3);
  border-radius: 8px;
  padding: 16px;
  border-radius: 4px;
  padding: 12px;
}

.c21 {
  color: #ffffff;
  font-size: 32px;
  font-weight: 600;
  margin: 8px 16px;
  line-height: 38px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

.c19 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c17 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  background: url(/tile.jpg) center no-repeat #F9F9F9;
  background-size: cover;
}

.c16 {
  background-color: #000000;
  border-radius: 8px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 475px;
  overflow: hidden;
  pointer-events: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  height: auto;
  min-height: 120px;
  border-radius: 4px;
}

.c16 .c20 {
  font-size: 12px;
  line-height: 12px;
  margin: 0;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 100%;
  color: #151515;
}

.c5 {
  display: none;
  width: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  width: 100%;
  margin-right: 24px;
}

.c3 {
  background: url(/banner.jpg);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 16px;
  height: 165px;
  width: 100%;
}

.c6 {
  position: absolute;
  bottom: 0;
  left: 32px;
  -webkit-transform: translateY(45%);
  -ms-transform: translateY(45%);
  transform: translateY(45%);
}

.c7 {
  position: relative;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: absolute;
  right: 0;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  position: relative;
  width: 90px;
}

.c15 {
  background: #F9F9F9;
  border-radius: 6px;
  border: 3px solid #F9F9F9;
}

@media (max-width:767px) {
  .c1 {
    margin-right: 12px;
  }
}

@media (max-width:767px) {
  .c6 {
    left: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        label="Upload a banner"
        role="application"
      >
        <div
          class="c3"
        >
          <button
            aria-label="Upload a banner"
            class="c4"
          />
          <button
            aria-label="Delete banner"
            class="c4"
          />
        </div>
        <input
          accept="image/gif,image/jpeg,image/png,image/webp"
          aria-invalid="false"
          aria-label="File selector"
          class="c5"
          type="file"
        />
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        class="c2"
        label="Upload an avatar"
        role="application"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <svg
              fill="none"
              height="0"
              viewBox="0 0 50 50"
              width="0"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <clippath
                  clipPathUnits="objectBoundingBox"
                  id="hexPath"
                  transform="scale(0.02, 0.02)"
                >
                  <path
                    d="M26.2,0.7l19.2,11.1c0.7,0.4,1.2,1.2,1.2,2.1v22.2c0,0.9-0.5,1.7-1.2,2.1L26.2,49.3c-0.7,0.4-1.7,0.4-2.4,0L4.5,38.2c-0.7-0.4-1.2-1.2-1.2-2.1V13.9c0-0.9,0.5-1.7,1.2-2.1L23.8,0.7C24.5,0.3,25.5,0.3,26.2,0.7z"
                  />
                </clippath>
              </defs>
            </svg>
          </div>
          <div
            class="c9"
            size="96"
          >
            <div
              class="c10 c11"
              size="96"
            />
          </div>
          <div
            class="c12"
          >
            <button
              aria-label="Upload an avatar"
              class="c4"
            />
          </div>
        </div>
        <input
          accept="image/gif,image/jpeg,image/png,image/webp"
          aria-invalid="false"
          aria-label="File selector"
          class="c5"
          type="file"
        />
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <div
          class="c2"
          label="Upload a tile"
          role="application"
        >
          <div
            class="c15"
          >
            <div
              class="c16"
              disabled=""
            >
              <div
                class="c17"
              />
              <div
                class="c18"
              >
                <div
                  class="c19"
                >
                  <h5
                    class="c20 c21"
                  >
                    Collection name
                  </h5>
                </div>
              </div>
            </div>
            <div
              class="c12"
            >
              <button
                aria-label="Upload a tile"
                class="c4"
              />
            </div>
          </div>
          <input
            accept="image/gif,image/jpeg,image/png,image/webp"
            aria-invalid="false"
            aria-label="File selector"
            class="c5"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
